# Kitsune

./: .aiignore  .gitignore  README.ja.md  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: ci.yml
buildSrc/src/main/kotlin/: Dependencies.kt
collection/: README.ja.md  README.md  build.gradle.kts
collection/src/main/kotlin/com/peco2282/kitsune/collection/: collectors.kt  iterables.kt  streams.kt
config/: README.ja.md  README.md  build.gradle.kts
config/src/main/kotlin/com/peco2282/kitsune/config/: Config.kt
date/: README.ja.md  README.md  build.gradle.kts
encrypt/: README.ja.md  README.md
encrypt/android/: build.gradle.kts
encrypt/api/: build.gradle.kts
encrypt/api/src/main/cpp/: CMakeLists.txt  my_crypto.c
encrypt/jvm/: build.gradle.kts
errorsafe/: README.ja.md  README.md  build.gradle.kts
errorsafe/src/main/kotlin/com.peco2282.kitsune.errorsafe/: AppError.kt  AppSafe.kt  ResultListener.kt  SafeResult.kt
i18n/: README.ja.md  README.md  build.gradle.kts
injector/: README.ja.md  README.md  build.gradle.kts
io/: README.ja.md  README.md  build.gradle.kts
logging/: README.ja.md  README.md
logging/android/: build.gradle.kts
logging/api/: build.gradle.kts
logging/jvm/: build.gradle.kts
reflect/: README.ja.md  README.md  build.gradle.kts
resilience/: README.ja.md  README.md  build.gradle.kts
socklet/: README.ja.md  README.md  build.gradle.kts
syntactical/: README.ja.md  README.md  build.gradle.kts
task/: README.ja.md  README.md  build.gradle.kts
(+90 files in other folders)
